bk_ida/gobmkida/g2/print_numeric_influence
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_numeric_influence/src/engine/influence.c:2275:64: error: use of undeclared identifier 'xmmword_4965D0'
*( __m128i *)format_stone = _mm_load_si128( ( const __m128i *)&xmmword_4965D0); 
                                                               ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_numeric_influence/src/obj/1/influence.o] Error 1
